--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -12,7 +12,7 @@
       rgba($primary-color, 0.9),
       rgba($primary-color, 0.3)
     ),
-    url('./../dist/img/model-1.png') center top;
+    url('/dist/img/model-1.png') center top;
   background-size: cover;
 
   h2 {
